name:                ix
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DataStructures.Atomic
                      ,DataStructures.Composite
                      ,IX.Universe.Combat
                      ,IX.Universe.HyperSpace
                      ,IX.Universe.Input
                      ,IX.Universe.Output
                      ,IX.Universe.Market
                      ,IX.Universe.Utils
                      ,IX.Server.Server
                      ,IX.Reactive.EventNetwork
                      ,IX.Reactive.Input
                      ,IX.Reactive.Output
                      ,IX.Reactive.Utils
                      
  build-depends:       base            >= 4.7 && < 5
                      ,text            == 1.2.0.6
                      ,classy-prelude  == 0.11.1.1
                      ,stm             == 2.4.4 
                      ,network         == 2.6.2.1
                      ,reactive-banana == 1.0.0.0
                      ,safe            == 0.3.9
                      ,random          == 1.1
                      ,MissingH        == 1.3.0.1
                      ,conduit-combinators == 0.3.1
                      ,conduit             == 1.2.4.2
                      ,conduit-extra       == 1.1.9
                      ,bytestring          == 0.10.4.0
                      ,stm-conduit         == 2.5.4
                      ,containers          == 0.5.5.1
                      ,word8               == 0.1.2
                      ,async               == 2.0.2
                      ,transformers        == 0.3.0.0
                    
  default-language:    Haskell2010

executable ix
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ix
  default-language:    Haskell2010

test-suite new-template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
