name:                ix
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DataStructures.Atomic
                      ,DataStructures.Composite
                      ,IX.Universe.Combat
                      ,IX.Universe.HyperSpace
                      ,IX.Universe.Input
                      ,IX.Universe.Output
                      ,IX.Universe.Market
                      ,IX.Universe.Utils
                      ,IX.Server.Server
                      ,IX.Reactive.EventNetwork
                      ,IX.Reactive.Input
                      ,IX.Reactive.Output
                      ,IX.Reactive.Utils
                      
  build-depends:       base            >= 4.7 && < 5
                      ,text            
                      ,classy-prelude  
                      ,stm              
                      ,network         
                      ,reactive-banana 
                      ,safe            
                      ,random          
                      ,MissingH        
                      ,conduit-combinators 
                      ,conduit             
                      ,conduit-extra       
                      ,bytestring          
                      ,stm-conduit         
                      ,containers          
                      ,word8               
                      ,async               
                      ,transformers       
                    
  default-language:    Haskell2010

executable ix
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ix
  default-language:    Haskell2010

test-suite new-template-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
